--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-sendgrid==5.3.0
+numpy==1.14.1
 motor==1.2.1
-requests==2.7.0
+matplotlib==2.2.0
 tornado==4.5.3
+sendgrid==5.3.0
+Pillow==5.0.0
+face_recognition==1.2.1
+protobuf==3.5.2.post1
+scipy==1.0.0
