--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ Pillow==5.0.0
 face_recognition==1.2.1
 protobuf==3.5.2.post1
 scipy==1.0.0
+google-cloud-core==0.28.0
+google-cloud-firestore==0.28.0
+google-cloud-storage==1.7.0
+google-auth==1.3.0
+google-api-core==0.1.4
+
